# yin

./: .gitignore  README.md  build.zig  build.zig.zon  flake.nix  meson.build  meson_options.txt
.github/: FUNDING.yml
client/: Ffmpeg.cpp  IPC_Client.cpp  main.cpp
daemon/: Buffer.cpp  Buffer.hpp  Daemon.cpp  Daemon.hpp  IPC_Server.cpp  Monitor.cpp  Monitor.hpp  Shaders.hpp  Wallpaper.cpp  Wallpaper.hpp  main.cpp
protocols/: wlr-layer-shell-unstable-v1.xml
scripts/: gen_shaders.py
shaders/: bookflip.frag  bounce.frag  box.frag  chessboard.frag  directional.frag  glitch.frag  main.frag  main.vert  mosaic.frag  revolveleft.frag  static.frag  swap.frag  zoom.frag
shared/: Binary.cpp  IPC.cpp  IPC.hpp  Message.cpp  shared.zig  utils.hpp
yin_client/: .main.zig.kak.mddGmw  downsize.zig  libgif.zig  main.zig  videoloader.zig
yin_daemon/: Buffer.zig  animation.zig  daemon.zig  image.zig  image_BACKUP_284750.zig  image_LOCAL_284646.zig  main.zig  output.zig  transition.zig  util.zig
